# jnlxm

./: .gitignore  CMakeLists.txt  FUNCTION_FLOW.md  README.md  build_firmware.py  find_db.py  firmakeLists.txt  pc_receiver.py  query_db.py  query_db2.py  query_db3.py  query_db4.py  query_device.py  read_com.ps1  read_com3.ps1  read_serial.ps1  read_serial2.ps1  sdkconfig  sdkconfig.defaults  sdkconfig.old  server.py  test_api.ps1  test_heartbeat.ps1  test_heartbeat2.ps1  test_register.ps1
backend/: $null  .env.example  Dockerfile  config.py  requirements.txt
backend/database/: init.sql
backend/src/: config.py  main.py  schemas.py
backend/src/api/: __init__.py  auth.py  config.py  device.py  log.py  member.py  notification.py  stats.py
backend/src/models/: __init__.py  config.py  database.py  device.py  (+4 more)
firmware/: CMakeLists.txt  build-esp32s3.bat  build.ps1  sdkconfig
firmware/main/: CMakeLists.txt  README.md  camera.c  camera.h  config.h  face_detection.c  face_detection.h  http_client.c  http_client.h  led_indicator.c  led_indicator.h  main.c  wifi_connect.c  wifi_connect.h
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
jnjxm/: README.md  config.json  personalities.json  server.py  users.json
jnjxm/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
jnjxm/docs/: firmware_requirements.md
jnjxm/web/: index.html
jnlxm-main1/jnjxm/: README.md  commit_msg.txt  requirements.txt  server.py
main/: CMakeLists.txt  app_main.c
web/: index.html
(+27 files in other folders)
